connecting to outside world

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=my-spring-boot-app
+spring.config.import=optional:classpath:.env
 
 # Enable H2 console
 spring.h2.console.enabled=true
@@ -6,12 +7,13 @@ spring.h2.console.enabled=true
 # Set the H2 console path
 spring.h2.console.path=/h2-console
 
-# H2 database connection details
-spring.datasource.url=jdbc:h2:mem:testdb  # Keep the same as in your config
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# PostgreSQL connection detials
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
 # Show SQL queries in the console
 spring.jpa.show-sql=true
