--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=my-spring-boot-app
 spring.config.import=optional:classpath:.env
+server.port=${PORT:8080}
 
 # Enable H2 console
 spring.h2.console.enabled=true
